fix: update ticket row and footer styles for improved readability and emphasis

--- a/src/style/Style-ventas.css
+++ b/src/style/Style-ventas.css
@@ -425,10 +425,9 @@ background-color: red; */
 .ticket-row {
   display: flex;
   justify-content: space-between;
-  font-size: 1.3rem;
-  padding: 0.5rem 0;
+  font-size: 1rem;
+  padding: 0.4rem 0;
   color: var(--font-color);
-  font-weight: 500;
 }
 
 /* separador */
@@ -438,10 +437,10 @@ background-color: red; */
 
 /* total destacado */
 .ticket-row.total {
-  font-size: 3rem;
-  font-weight: 700;
+  font-size: 2rem;
+  font-weight: 600;
   /* color: #5a68e6; */
-  padding-top: 1rem;
+  padding-top: 0.8rem;
 }
 
 /* botones abajo */
@@ -473,7 +472,7 @@ background-color: red; */
     margin: 0;
     padding: 0;
     font-family: "Courier New", Courier, monospace;
-    font-size: 12px;
+    font-size: 14px;
     color: #000;
     background: #fff;
   }
@@ -485,7 +484,7 @@ background-color: red; */
 
   .ticket-header h2 {
     margin: 0;
-    font-size: 16px;
+    font-size: 18px;
   }
 
   .ticket-header p {
@@ -511,14 +510,14 @@ background-color: red; */
   .item-main {
     display: flex;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 18px;
   }
 
   .item-prices {
     display: flex;
     justify-content: space-between;
     padding-left: 20px;
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .ticket-footer {
@@ -532,7 +531,7 @@ background-color: red; */
   }
 
   .footer-row.total {
-    font-size: 22px;
+    font-size: 26px;
     font-weight: bold;
     border-top: 2px solid #000;
     padding-top: 5px;
