--- a/src/style/Style.css
+++ b/src/style/Style.css
@@ -1248,8 +1248,8 @@ li {
 
   .item-main {
     display: flex;
-    font-weight: 800; /* Nombres más gruesos */
-    font-size: 15px;
+    font-weight: 900; /* Nombres más gruesos */
+    font-size: 20px;
   }
 
   .item-qty {
@@ -1260,7 +1260,8 @@ li {
     display: flex;
     justify-content: space-between;
     padding-left: 0px;
-    font-weight: 700;
+    font-weight: bold;
+    font-size: 18px;
     margin-top: 2px;
   }
 
@@ -1271,23 +1272,24 @@ li {
   .footer-row {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 6px;
-    font-size: 15px;
+    margin-bottom: 8px;
+    font-size: 19px;
+    font-weight: bold;
   }
 
   .footer-row.total {
-    font-size: 20px; /* Mucho más grande */
+    font-size: 30px; /* Mucho más grande */
     font-weight: 900;
     border-top: 2px solid black;
-    padding-top: 8px;
+    padding-top: 10px;
     margin-top: 5px;
   }
 
   .thanks {
     text-align: center;
     margin-top: 20px;
-    font-weight: 800;
-    font-size: 14px;
+    font-weight: 900;
+    font-size: 18px;
     border-top: 1px solid black;
     padding-top: 10px;
   }
